--- a/src/global.scss
+++ b/src/global.scss
@@ -1,4 +1,5 @@
 // http://ionicframework.com/docs/theming/
+@import "~bootstrap/dist/css/bootstrap.css";
 @import '~@ionic/angular/css/core.css';
 @import '~@ionic/angular/css/normalize.css';
 @import '~@ionic/angular/css/structure.css';
